--- a/static/scss/userprofile/login.css
+++ b/static/scss/userprofile/login.css
@@ -2,18 +2,19 @@
   text-align: left;
   width: 100%;
   display: none;
+  border-radius: 4px;
 }
 
 .login-signup #loginForm .part-one {
   border-radius: 10px;
-  background: white !important;
+  background: #e8edff !important;
   width: 100%;
 }
 
 .login-signup #loginForm .part-one .form-tag-username {
   font-size: 15px;
-  color: #3c54a0;
-  background: white;
+  color: #304792;
+  background: #e8edff;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
@@ -21,12 +22,14 @@
   position: absolute;
   left: 20px;
   top: 13px;
+  z-index: 10;
+  border-radius: 5px;
 }
 
 .login-signup #loginForm .part-one .form-tag-password {
   font-size: 15px;
-  color: #3c54a0;
-  background: white;
+  color: #304792;
+  background: #e8edff;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
@@ -34,15 +37,22 @@
   position: absolute;
   left: 20px;
   top: 78px;
+  z-index: 10;
+  border-radius: 5px;
 }
 
 .login-signup #loginForm .part-one input {
-  width: 100%;
+  width: 95%;
   border: 2px solid #3c54a0;
   border-radius: 4px;
   padding: 8px;
   outline: none;
   font-size: 15px;
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  background: white;
 }
 
 .login-signup #loginForm .part-one button {
@@ -96,6 +106,7 @@
 
 .login-signup #loginForm .part-two a:active {
   background: #d7d7d7;
+  text-decoration: underline;
 }
 
 .login-signup #loginForm.active {
