--- a/static/scss/userprofile/login.scss
+++ b/static/scss/userprofile/login.scss
@@ -4,37 +4,46 @@
         text-align: left;
         width: 100%;
         display: none;
+        border-radius: 4px;
         .part-one{
             border-radius: 10px;
-            background: white !important;
+            background: #e8edff !important;
             width: 100%;
             .form-tag-username{
                 font-size: 15px;
-                color: rgb(60, 84, 160);
-                background: white;
+                color: rgb(48, 71, 146);
+                background: #e8edff;
                 width: max-content;
                 padding: 0 2px;
                 position: absolute;
                 left: 20px;
                 top: 13px;
+                z-index: 10;
+                border-radius: 5px;
             }
             .form-tag-password{
                 font-size: 15px;
-                color: rgb(60, 84, 160);
-                background: white;
+                color: rgb(48, 71, 146);
+                background: #e8edff;
                 width: max-content;
                 padding: 0 2px;
                 position: absolute;
                 left: 20px;
                 top: 78px;
+                z-index: 10;
+                border-radius: 5px;
             }
             input{
-                width: 100%;
+                width: 95%;
                 border: 2px solid rgb(60, 84, 160);
                 border-radius: 4px;
                 padding: 8px;
                 outline: none;
-                font-size: 15px;      
+                font-size: 15px;    
+                position: relative; 
+                left: 50%;
+                transform: translateX(-50%);
+                background: white;
             }
             button{
                 color: rgb(15, 15, 15);
@@ -70,6 +79,7 @@
                 font-weight: bolder;
                 &:active{
                     background: rgb(215, 215, 215);
+                    text-decoration: underline;
                 }
             }
         }
