--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -51,6 +51,7 @@ body{
   height: 80vh;
   background: transparent;
   padding-top: 60px;
+  margin-bottom: 60px;
   .content{
     transform: translateY(10px);
     opacity: 0;
