--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -446,38 +446,6 @@ html, body {
     transition: all ease-in .5s;
     transform: translateY(80px);
     max-width: 320px;
-    .ribbon{
-      width: 30%;
-      height: 20px;
-      position: absolute;
-      left: -15px;
-      top: 45px;
-      border-radius: 30px;
-      background: rgb(250, 250, 250);
-      border-bottom-left-radius: 0;
-      &::before{
-        content: '';
-        position: absolute;
-        top: 20px;
-        left: 0px;
-        height: 20px;
-        width: 15px;
-        background: rgb(170, 170, 170);
-        border-top-left-radius: 20px;
-        border-bottom-left-radius: 20px;
-        z-index: 2;
-      }
-      &::after{
-        content: '';
-        position: absolute;
-        top: 20px;
-        left: 0px;
-        height: 10px;
-        width: 15px;
-        background: rgb(250, 250, 250);
-        z-index: 1;
-      }
-    }
     .text{
       .product-name{
         font-size: 22px;
@@ -677,6 +645,12 @@ html, body {
       }
     }
   }
+}
+// ORDER NOW
+.order-now{
+  width: 100%;
+  height: auto;
+  background: transparent;
 }
 // CONTACT US
 .contact-us{
