--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -136,8 +136,9 @@
    </div>
 </div>
 <!-- ORDER NOW -->
-<div class="order-now">
-   
+<div class="order-now" id="orderNow">
+   <img src="{% static 'images/icons/phone-sreen.png' %}" alt="ios screen mockup preview webiste order webiser">
+   <button class="order-button" onclick="window.location.href='/bestill'">kom i gang</button>
 </div>
 <!-- CONTACT US -->
 <div id="contactScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
