--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -651,7 +651,6 @@ html, body {
   width: 100%;
   height: auto;
   background: transparent;
-  text-align: center;
   opacity: 0;
   transition: .5s ease-in-out;
   transform: translateX(20px);
@@ -660,7 +659,7 @@ html, body {
     transform: translateX(-15px);
   }
     .order-button{
-      transform: translateY(-220px);
+      transform: translateY(-220px) translateX(90px);
       border-radius: 4px;
       width: 200px;
       font-size: 16px;
