--- a/static/scss/store/order.css
+++ b/static/scss/store/order.css
@@ -21,7 +21,7 @@
   padding: 10px;
   margin: 15px;
   margin-top: 0;
-  background: #e8edff;
+  background: #f1f4ff;
   border-radius: 4px;
 }
 
@@ -48,7 +48,7 @@
   width: 100%;
   text-transform: uppercase;
   font-family: 'Sniglet', cursive;
-  color: white;
+  color: #142c78;
   font-weight: 700;
   font-size: 26px;
   text-align: center;
@@ -441,8 +441,9 @@
 
 .make-order form .order-form-step2 .form-tag-css {
   font-size: 15px;
-  color: #3c54a0;
-  background: white;
+  color: #304792;
+  border-radius: 5px;
+  background: #e8edff;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
@@ -454,8 +455,9 @@
 
 .make-order form .order-form-step2 .form-tag-html {
   font-size: 15px;
-  color: #3c54a0;
-  background: white;
+  color: #304792;
+  border-radius: 5px;
+  background: #e8edff;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
@@ -467,8 +469,9 @@
 
 .make-order form .order-form-step2 .form-tag-javascript {
   font-size: 15px;
-  color: #3c54a0;
-  background: white;
+  color: #304792;
+  border-radius: 5px;
+  background: #e8edff;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
@@ -480,8 +483,9 @@
 
 .make-order form .order-form-step2 .form-tag-python_django {
   font-size: 15px;
-  color: #3c54a0;
-  background: white;
+  color: #304792;
+  border-radius: 5px;
+  background: #e8edff;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
@@ -531,8 +535,9 @@
 
 .make-order form .order-form-step3 .form-tag-name {
   font-size: 15px;
-  color: #3c54a0;
-  background: white;
+  color: #304792;
+  border-radius: 5px;
+  background: #e8edff;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
@@ -544,8 +549,9 @@
 
 .make-order form .order-form-step3 .form-tag-email {
   font-size: 15px;
-  color: #3c54a0;
-  background: white;
+  color: #304792;
+  border-radius: 5px;
+  background: #e8edff;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
@@ -557,8 +563,9 @@
 
 .make-order form .order-form-step3 .form-tag-message {
   font-size: 15px;
-  color: #3c54a0;
-  background: white;
+  color: #304792;
+  border-radius: 5px;
+  background: #e8edff;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
@@ -606,12 +613,12 @@
   border-radius: 4px;
   width: 200px;
   font-size: 16px;
-  padding: 5px;
+  padding: 10px;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
   color: white;
   outline: none;
-  background: linear-gradient(135deg, #3c54a0, #7996f8);
+  background: linear-gradient(135deg, #5a7ef5, #607bd3);
   -webkit-box-shadow: 1.5px 3px 2px #3c54a0;
           box-shadow: 1.5px 3px 2px #3c54a0;
   border: 2px solid transparent;
