--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -28,18 +28,37 @@
 <div class="cover" id="cover">
    <div class="content" id="coverContent">
       <div class="text">
-         <h1 class="maintext">moderne nettsider til</h1>
-         <h1 class="secondtext">lave priser</h1>
-         <p class="cover-paragraph">Ta neste steg for ditt bedrift med hjelp av våres fantastiske og moderne nettsider laget av Norges beste designere og utviklere</p>
       </div>
       <div class="cover-action">
-         <a href="/bestill">Bestill</a>
-         <a onclick="contact()">Kontakt oss</a>
       </div>
-      <img src="{% static '/images/covers/cover-7.png' %}" alt="cover-1">
+      <img src="{% static '/images/covers/main-cover2.jpg' %}" alt="cover-1">
    </div>
 </div>
-<!-- SERVICES -->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<!-- SERVICES
 <div class="services" id="services">
    <h1 class="heading">hvorfor velge webiser</h1>
    <p class="services-paragraph">Klikk for å lese mer</p>
@@ -87,9 +106,9 @@
          <i class="fas fa-coins"></i>
       </div>
    </div>
-</div>
+</div> -->
 <!-- PRODUCT -->
-<div id="productScrollTo" class="scroll-to" style="height: 60px; width: 100%"></div>
+<!-- <div id="productScrollTo" class="scroll-to" style="height: 60px; width: 100%"></div>
 <div class="product-section" id="productHomePage">
    <h1 class="heading">Priser</h1>
    <div class="flex">
@@ -102,9 +121,9 @@
       </div>
       {% endfor %}
    </div>
-</div>
+</div> -->
 <!-- INFO/PROCCESS -->
-<div id="proccessScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
+<!-- <div id="proccessScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
 <div class="proccess" id="info">
    <h1 class="heading">Så enkelt er det</h1>
    <div class="content">
@@ -134,14 +153,14 @@
          <p>Da alt er 100% fullført, så vil nettsiden bli sendt over til deg innen 2 dager</p>
       </div>
    </div>
-</div>
+</div> -->
 <!-- ORDER NOW -->
-<div class="order-now" id="orderNow">
+<!-- <div class="order-now" id="orderNow">
    <img src="{% static 'images/icons/phone-sreen.png' %}" alt="ios screen mockup preview webiste order webiser">
    <button class="order-button" onclick="window.location.href='/bestill'">kom i gang</button>
-</div>
+</div> -->
 <!-- CONTACT US -->
-<div id="contactScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
+<!-- <div id="contactScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
 <div class="contact-us" id="contactUs">
    <h1 class="heading">Trenger du extra hjelp?</h1>
    <p>Kontakter oss under</p>
@@ -162,5 +181,5 @@
          <button class="hover" type="submit" name="contact" value="contact">Send</button>
       </div>
    </form>
-</div>
+</div>  -->
 {% endblock %}
