--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -28,7 +28,6 @@
             <span class="upper-span"></span>
             <span class="center-span"></span>
             <span class="lower-span"></span>
-            <i class="fas fa-times close-hamburger"></i>
         </div>
         <!-- SIDEBAR CIRCLE BACKGROUND -->
         <div class="circle" id="sidebarCircleBackground"></div>
@@ -47,7 +46,7 @@
     <!-- USER -->
         <!-- USER ICON -->
         <a onclick="myaccount()" class="my-account-icon" id="myAccountIcon">
-            <i class="far fa-user-astronaut"></i>    
+            <i class="far fa-user"></i>  
         </a>
         <!-- USER LOGIN OR SIGNUP -->
         <div class="login-signup" id="loginORSignUp">
