--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -7,8 +7,32 @@
 }
 
 body {
-  background: -webkit-gradient(linear, right top, left top, from(#253b83), color-stop(#3c54a0), color-stop(#3c54a0), to(#637ccc));
-  background: linear-gradient(to left, #253b83, #3c54a0, #3c54a0, #637ccc);
+  background: -webkit-gradient(linear, right top, left top, from(rgba(202, 215, 255, 0.226)));
+  background: linear-gradient(to left, rgba(202, 215, 255, 0.226));
+}
+
+.bottom-nav {
+  width: 100%;
+  height: 40px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background: #6e8efb;
+  z-index: 100;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.bottom-nav a {
+  color: white !important;
+  font-size: 16px;
 }
 
 #backToTop {
@@ -52,16 +76,13 @@ body {
 
 .cover {
   width: 100%;
-  height: 80vh;
+  height: 400px;
   background: transparent;
-  padding-top: 60px;
   margin-bottom: 60px;
 }
 
 .cover .content {
-  -webkit-transform: translateY(10px);
-          transform: translateY(10px);
-  opacity: 0;
+  opacity: 1;
   -webkit-transition: all 1.5s ease-in-out;
   transition: all 1.5s ease-in-out;
 }
@@ -120,12 +141,12 @@ body {
 }
 
 .cover .content img {
-  width: 255px;
+  width: 100%;
   height: auto;
-  position: absolute;
-  right: 5px;
-  -webkit-transform: translateY(35px);
-          transform: translateY(35px);
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-filter: brightness(50%);
+          filter: brightness(50%);
 }
 
 .load-wrapp {
