--- a/static/scss/store/footer.css
+++ b/static/scss/store/footer.css
@@ -5,6 +5,7 @@
   padding: 15px;
   background: #fafafa;
   position: relative;
+  padding-bottom: 60px;
 }
 
 #footer .footer-section {
@@ -78,11 +79,10 @@
 
 #footer .copyright {
   position: absolute;
-  bottom: 0;
   left: 0;
   width: 100%;
   height: auto;
-  background: #485ab9;
+  background: #6e8efb;
   text-align: center;
 }
 
