--- a/static/scss/store/footer.scss
+++ b/static/scss/store/footer.scss
@@ -6,6 +6,7 @@
     padding: 15px;
     background: rgb(250, 250, 250);
     position: relative;
+    padding-bottom: 60px;
     .footer-section{
         display: flex;
         .footer-ul{
@@ -58,11 +59,10 @@
     }
     .copyright{
         position: absolute;
-        bottom: 0;
         left: 0;
         width: 100%;
         height: auto;
-        background: rgb(72, 90, 185);
+        background: #6e8efb;
         text-align: center;
         p{
             padding: auto;
