--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -1,5 +1,5 @@
 #navbar {
-  background: white;
+  background: transparent;
   z-index: 100;
   width: 100%;
   height: 60px;
@@ -11,7 +11,24 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border-bottom: 1px solid rgba(200, 200, 200, 0.7);
+  -webkit-transition: .2s ease-in-out;
+  transition: .2s ease-in-out;
+}
+
+#navbar.sticky {
+  background: white;
+}
+
+#navbar.sticky .hamburger span {
+  background: #323232;
+}
+
+#navbar.sticky .my-account-icon i {
+  color: #323232;
+}
+
+#navbar.sticky .logo h1 {
+  color: #323232;
 }
 
 #navbar .logo {
@@ -20,30 +37,30 @@
   left: 20px;
   width: auto;
   height: auto;
+  z-index: 1000;
 }
 
 #navbar .logo h1 {
   margin: 0;
   font-family: 'Indie Flower', cursive;
-  color: #3c54a0;
+  color: #ebebeb;
   font-size: 30px;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+  -webkit-transition: .2s ease-in-out;
+  transition: .2s ease-in-out;
+}
+
+#navbar .logo.menu-click h1 {
+  color: #ebebeb;
 }
 
 #navbar .hamburger {
-  padding: 25px;
-  padding-top: 20px;
-  padding-bottom: 23px;
+  padding: 10px;
   margin: 0;
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
   width: auto;
   height: auto;
   position: absolute;
   right: 0px;
   z-index: 1000;
-  border-left: 1px solid rgba(220, 220, 220, 0.7);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -51,65 +68,32 @@
 
 #navbar .hamburger span {
   display: block;
-  width: 6px;
-  height: 6px;
-  background: black;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+  width: 7px;
+  height: 7px;
+  -webkit-transition: .2s ease-in-out;
+  transition: .2s ease-in-out;
+  background: #ebebeb;
   border-radius: 100%;
   margin: 3px;
   -webkit-transform: translateX(-9px);
           transform: translateX(-9px);
 }
 
-#navbar .hamburger .close-hamburger {
-  font-size: 26px;
-  display: none;
-  -webkit-transform: translateY(-3px);
-          transform: translateY(-3px);
+#navbar .hamburger.click .upper-span {
+  margin-top: 15px;
 }
 
-#navbar .hamburger.click {
-  background: -webkit-gradient(linear, left bottom, left top, from(#e6e6e6), color-stop(whitesmoke), to(#e6e6e6));
-  background: linear-gradient(to top, #e6e6e6, whitesmoke, #e6e6e6);
-  padding-bottom: 14px;
+#navbar .hamburger.click .center-span {
+  width: 8px;
+  height: 8px;
+}
+
+#navbar .hamburger.click .lower-span {
+  margin-top: 15px;
 }
 
 #navbar .hamburger.click span {
-  display: none;
-}
-
-#navbar .hamburger.click .close-hamburger {
-  display: block;
-}
-
-#navbar .hamburger:active {
-  -webkit-animation-name: hamburger-scale;
-          animation-name: hamburger-scale;
-  -webkit-animation-duration: .1s;
-          animation-duration: .1s;
-}
-
-@-webkit-keyframes hamburger-scale {
-  0% {
-    -webkit-transform: scale(1) rotate(180deg);
-            transform: scale(1) rotate(180deg);
-  }
-  100% {
-    -webkit-transform: scale(1.2) rotate(180deg);
-            transform: scale(1.2) rotate(180deg);
-  }
-}
-
-@keyframes hamburger-scale {
-  0% {
-    -webkit-transform: scale(1) rotate(180deg);
-            transform: scale(1) rotate(180deg);
-  }
-  100% {
-    -webkit-transform: scale(1.2) rotate(180deg);
-            transform: scale(1.2) rotate(180deg);
-  }
+  background: #ebebeb !important;
 }
 
 #navbar .circle {
@@ -133,7 +117,8 @@
   -webkit-transform: scale(20);
           transform: scale(20);
   opacity: 1;
-  background: #3c54a0;
+  background: #4c66bb;
+  opacity: 0.95;
 }
 
 #navbar .sidebar {
@@ -222,21 +207,17 @@
 #navbar .my-account-icon {
   margin: 0;
   position: absolute;
-  right: 70px;
+  right: 75px;
+  padding: 10px;
   cursor: pointer;
-  padding: 25px;
-  padding-top: 10px;
+  padding: 10px;
   width: auto;
   height: auto;
-  border-right: 1px solid rgba(220, 220, 220, 0.7);
-  background: white;
 }
 
 #navbar .my-account-icon i {
-  color: black;
-  font-size: 22px;
-  -webkit-transform: translateY(8.5px);
-          transform: translateY(8.5px);
+  color: #ebebeb;
+  font-size: 25px;
 }
 
 #navbar .my-account-icon i:active {
@@ -377,20 +358,18 @@
 #navbar .order {
   margin: 0;
   position: absolute;
-  right: 150px;
+  right: 130px;
   cursor: pointer;
   color: white;
   padding: 5px 8px;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
+  width: 70px;
   text-align: center;
   border-radius: 7px;
   -webkit-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
   font-size: 14px;
   border-radius: 4px;
-  background: linear-gradient(135deg, #3c54a0, #6e8efb);
+  background: #6e8efb;
   text-decoration: none;
 }
 /*# sourceMappingURL=nav.css.map */
