--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -2,7 +2,7 @@
 // STANDARD PHONE
 #navbar{
     // NAVBAR CSS
-    background: white;
+    background: transparent;
     z-index: 100;
     width: 100%;
     height: 60px;
@@ -10,7 +10,26 @@
     top: 0px;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid rgba(200, 200, 200, 0.7);
+    transition: .2s ease-in-out;
+    // NAVBAR STICKY
+    &.sticky{
+        background: white;
+        .hamburger{
+            span{
+                background: rgb(50, 50, 50);
+            }
+        }
+        .my-account-icon{
+            i{
+                color: rgb(50, 50, 50);
+            }
+        }
+        .logo{
+            h1{
+                color: rgb(50, 50, 50);
+            }
+        }
+    }
     // LOGO CSS 
     .logo{
         cursor: pointer;
@@ -18,35 +37,38 @@
         left: 20px;
         width: auto;
         height: auto;
+        z-index: 1000;
         h1{
             margin: 0;
             font-family: 'Indie Flower', cursive;
-            color: rgb(60, 84, 160);
+            // color: rgb(60, 84, 160);
+            color: rgb(235, 235, 235);
             font-size: 30px;
-            transition: all 0.2s ease-in-out;
+            transition: .2s ease-in-out;
+        }
+        &.menu-click{
+            h1{
+                color: rgb(235, 235, 235);
+            }
         }
     }
     // // // MENU CSS
     // HAMBURGER CSS
     .hamburger{
-        padding: 25px;
-        padding-top: 20px;
-        padding-bottom: 23px;
+        padding: 10px;
         margin: 0;
-        transform: rotate(180deg);
         width: auto;
         height: auto;
         position: absolute;
         right: 0px;
         z-index: 1000;
-        border-left: 1px solid rgba(220, 220, 220, 0.7);
         display: flex;
         span{
             display: block;
-            width: 6px;
-            height: 6px;
-            background: black;
-            transition: all 0.2s ease-in-out;
+            width: 7px;
+            height: 7px;
+            transition: .2s ease-in-out;
+            background: rgb(235, 235, 235);
             border-radius: 100%;
             margin: 3px;
             transform: translateX(-9px);
@@ -57,29 +79,20 @@
         }
         .lower-span{
         }
-        .close-hamburger{
-            font-size: 26px;
-            display: none;
-            transform: translateY(-3px);
-        }
         &.click{
-            background: linear-gradient(to top, rgb(230, 230, 230), rgb(245, 245, 245), rgb(230, 230, 230));
-            padding-bottom: 14px;
+            .upper-span{
+                margin-top: 15px;
+            }
+            .center-span{
+                width: 8px;
+                height: 8px;
+            }
+            .lower-span{
+                margin-top: 15px;
+            }
             span{
-                display: none;
+                background: rgb(235, 235, 235) !important;
             }
-            .close-hamburger{
-                display: block;
-            }
-        }
-        &:active{
-            animation-name: hamburger-scale;
-            animation-duration: .1s;
-        }
-        // HAMBURGER CSS KEYFRAMES ANIMATION
-        @keyframes hamburger-scale {
-            0%   {transform: scale(1) rotate(180deg);}
-            100% {transform: scale(1.2) rotate(180deg);}
         }
     }
     // SIDEBAR
@@ -99,7 +112,8 @@
         &.active{
             transform: scale(20);
             opacity: 1;
-            background: rgb(60, 84, 160);
+            background: rgb(76, 102, 187);
+            opacity: 0.95;
         }
     }
     .sidebar{
@@ -174,18 +188,15 @@
     .my-account-icon{
         margin: 0;
         position: absolute;
-        right: 70px;
+        right: 75px;
+        padding: 10px;
         cursor: pointer;
-        padding: 25px;
-        padding-top: 10px;
+        padding: 10px;
         width: auto;
         height: auto;
-        border-right: 1px solid rgba(220, 220, 220, 0.7);
-        background: white;
         i{
-            color: black;
-            font-size: 22px;
-            transform: translateY(8.5px);
+            color: rgb(235, 235, 235);
+            font-size: 25px;
             &:active{
                 animation-name: user-scale;
                 animation-duration: .1s;
@@ -279,17 +290,17 @@
     .order{
         margin: 0;
         position: absolute;
-        right: 150px;
+        right: 130px;
         cursor: pointer;
         color: white;
         padding: 5px 8px;
-        width: max-content;
+        width: 70px;
         text-align: center;
         border-radius: 7px;
         transition: all 0.2s ease-in;
         font-size: 14px;
         border-radius: 4px;
-        background: linear-gradient(135deg,rgb(60, 84, 160), #6e8efb); 
+        background: #6e8efb;
         text-decoration: none;
       }
 }
