--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -13,7 +13,7 @@ body {
 
 .bottom-nav {
   width: 100%;
-  height: 40px;
+  height: 50px;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -94,24 +94,26 @@ body {
 }
 
 .cover .content .text {
-  width: auto;
+  width: 100%;
+  height: auto;
   text-align: left;
-  padding-left: 5px;
+  position: absolute;
+  left: 15px;
+  top: 100px;
+  z-index: 10;
 }
 
 .cover .content .text h1 {
-  text-transform: uppercase;
   color: white;
   font-family: 'Sniglet', cursive;
+  font-size: 34px;
 }
 
-.cover .content .text h1.maintext {
-  font-size: 26px;
-}
-
-.cover .content .text h1.secondtext {
-  font-size: 42px;
-  font-weight: bold;
+.cover .content .text h1 .moderne {
+  color: transparent;
+  -webkit-text-stroke: 1px white;
+  text-stroke: 1px white;
+  text-shadow: none;
 }
 
 .cover .content .text .cover-paragraph {
