--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -14,7 +14,7 @@ body{
 }
 .bottom-nav{
   width: 100%;
-  height: 40px;
+  height: 50px;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -75,19 +75,25 @@ body{
       transform: translateY(80px);
     }
     .text{
-      width: auto;
+      width: 100%;
+      height: auto;
       text-align: left;
-      padding-left: 5px;
+      position: absolute;
+      left: 15px;
+      top: 100px;
+      z-index: 10;
       h1{
-        text-transform: uppercase;
         color: white;
         font-family: 'Sniglet', cursive;
-        &.maintext{
-          font-size: 26px;
+        font-size: 34px;
+        .moderne{
+          color: transparent;
+          -webkit-text-stroke: 1px white;
+          text-stroke: 1px white;
+          text-shadow: none;
         }
-        &.secondtext{
-          font-size: 42px;
-          font-weight: bold;
+        .lave.priser{
+
         }
       }
       .cover-paragraph{
