--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -14,6 +14,10 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Sniglet&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
+
 
 
 <!-- LOADER -->
@@ -26,12 +30,13 @@
  </div>
 <!-- COVER -->
 <div class="cover" id="cover">
+   <img src="{% static '/images/covers/main-cover2.jpg' %}" alt="cover-1">
    <div class="content" id="coverContent">
       <div class="text">
+         <h1><span class="moderne">Moderne</span> nettsider <br>til<br> <div class="background-overlay"></div> <span class="lave priser">lave priser</span></h1>
       </div>
       <div class="cover-action">
       </div>
-      <img src="{% static '/images/covers/main-cover2.jpg' %}" alt="cover-1">
    </div>
 </div>
 <br>
