--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -76,37 +76,46 @@ body {
 
 .cover {
   width: 100%;
-  height: 400px;
-  background: transparent;
-  margin-bottom: 60px;
+  height: auto;
+  position: relative;
+}
+
+.cover img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-filter: brightness(50%);
+          filter: brightness(50%);
 }
 
 .cover .content {
-  opacity: 1;
-  -webkit-transition: all 1.5s ease-in-out;
-  transition: all 1.5s ease-in-out;
+  opacity: 0;
+  -webkit-transition: .4s ease-in;
+  transition: .4s ease-in;
+  position: absolute;
+  top: 500px;
+  width: 100%;
+  text-align: center;
 }
 
 .cover .content.active {
   opacity: 1;
-  -webkit-transform: translateY(80px);
-          transform: translateY(80px);
+  top: 140px;
 }
 
 .cover .content .text {
   width: 100%;
   height: auto;
-  text-align: left;
-  position: absolute;
-  left: 15px;
-  top: 100px;
+  text-align: center;
   z-index: 10;
 }
 
 .cover .content .text h1 {
   color: white;
-  font-family: 'Sniglet', cursive;
-  font-size: 34px;
+  font-size: 38px;
+  font-family: 'Alata', sans-serif;
+  line-height: 160%;
 }
 
 .cover .content .text h1 .moderne {
@@ -114,41 +123,23 @@ body {
   -webkit-text-stroke: 1px white;
   text-stroke: 1px white;
   text-shadow: none;
+  font-family: 'Alata', sans-serif;
 }
 
-.cover .content .text .cover-paragraph {
-  font-size: 16px;
-  color: white;
-  font-family: 'Sniglet', cursive;
-  opacity: 0.7;
-}
-
-.cover .content .cover-action {
-  text-align: left;
-  width: auto;
-  -webkit-transform: translateY(30px);
-          transform: translateY(30px);
-  padding-left: 5px;
-}
-
-.cover .content .cover-action a {
-  border: 2px solid transparent;
-  background: linear-gradient(135deg, #688bfc, #7996f8);
-  border-radius: 4px;
-  color: white;
+.cover .content .text h1 .lave.priser {
+  font-family: 'Alata', sans-serif;
   padding: 10px;
-  -webkit-box-shadow: 0px 5px 2px #3c54a0;
-          box-shadow: 0px 5px 2px #3c54a0;
-  text-decoration: none;
+  position: relative;
 }
 
-.cover .content img {
-  width: 100%;
-  height: auto;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -webkit-filter: brightness(50%);
-          filter: brightness(50%);
+.cover .content .text h1 .background-overlay {
+  width: 200px;
+  height: 50px;
+  background: #6e8efb;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: skew(-18deg) translateY(6px) translateX(-50%);
+          transform: skew(-18deg) translateY(6px) translateX(-50%);
 }
 
 .load-wrapp {
