--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -64,65 +64,57 @@ body{
 // COVER
 .cover{
   width: 100%;
-  height: 400px;
-  background: transparent;
-  margin-bottom: 60px;
+  height: auto;
+  position: relative;
+  img{
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    filter: brightness(50%);
+  }
   .content{
-    opacity: 1;
-    transition: all 1.5s ease-in-out;
+    opacity: 0;
+    transition: .4s ease-in;
+    position: absolute;
+    top: 500px;
+    width: 100%;
+    text-align: center;
     &.active{
       opacity: 1;
-      transform: translateY(80px);
+      top: 140px;
     }
     .text{
       width: 100%;
       height: auto;
-      text-align: left;
-      position: absolute;
-      left: 15px;
-      top: 100px;
+      text-align: center;
       z-index: 10;
       h1{
         color: white;
-        font-family: 'Sniglet', cursive;
-        font-size: 34px;
+        font-size: 38px;
+        font-family: 'Alata', sans-serif;
+        line-height: 160%;
         .moderne{
           color: transparent;
           -webkit-text-stroke: 1px white;
           text-stroke: 1px white;
           text-shadow: none;
+          font-family: 'Alata', sans-serif;
         }
         .lave.priser{
-
+          font-family: 'Alata', sans-serif;
+          // background: #6e8efb;
+          padding: 10px;
+          position: relative;
+        }
+        .background-overlay{
+          width: 200px;
+          height: 50px;
+          background: #6e8efb;
+          position: absolute;
+          left: 50%;
+          transform: skew(-18deg) translateY(6px) translateX(-50%);
         }
       }
-      .cover-paragraph{
-        font-size: 16px;
-        color: white;
-        font-family: 'Sniglet', cursive;
-        opacity: 0.7;
-      }
-    }
-    .cover-action{
-      text-align: left;
-      width: auto;
-      transform: translateY(30px);
-      padding-left: 5px;
-      a{
-        border: 2px solid transparent;
-        background: linear-gradient(135deg,#688bfc, #7996f8);    
-        border-radius: 4px;
-        color: white;
-        padding: 10px;
-        box-shadow: 0px 5px 2px rgb(60, 84, 160);
-        text-decoration: none;
-      }
-    }
-    img{
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-      filter: brightness(50%);
     }
   }
 }
