--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -29,6 +29,10 @@
                 color: rgb(50, 50, 50);
             }
         }
+        .order{
+            background: #6e8efb;
+            border: 2px solid transparent;
+        }
     }
     // LOGO CSS 
     .logo{
@@ -290,8 +294,9 @@
         transition: all 0.2s ease-in;
         font-size: 14px;
         border-radius: 4px;
-        background: #6e8efb;
+        background: transparent;
         text-decoration: none;
+        border: 2px solid white;
       }
 }
 
