--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -36,10 +36,10 @@
          <h1><span class="moderne">Moderne</span> nettsider <br>til<br> <div class="background-overlay"></div> <span class="lave priser">lave priser</span></h1>
       </div>
       <div class="cover-action">
-         <button class="button-case-studies">Prosjekter</button> 
+         <!-- <button class="button-case-studies">Prosjekter</button> 
          <br>
          <br>
-         <button class="button-case-studies">NESTE BUTTON</button>
+         <button class="button-case-studies">NESTE BUTTON</button> -->
       </div>
    </div>
 </div>
